@@ -43,15 +43,14 @@ HAR Page Test.
           "cookies": [],
           "headers": "<filtered>",
           "content": {
-            "size": 3044,
+            "size": 2923,
             "compression": 0,
             "mimeType": "text/html",
-            "text": "<filtered text (3044)>"
+            "text": "<filtered text (2923)>"
           },
           "redirectURL": "",
           "headersSize": "<filtered>",
-          "bodySize": "<filtered>",
-          "_transferSize": "<filtered>"
+          "bodySize": "<filtered>"
         },
         "cache": {},
         "timings": {
@@ -62,8 +61,7 @@ HAR Page Test.
           "send": "<filtered>",
           "wait": "<filtered>",
           "receive": "<filtered>"
-        },
-        "connection": "<filtered>"
+        }
       },
       {
         "pageref": "page_0",
@@ -93,8 +91,7 @@ HAR Page Test.
           },
           "redirectURL": "",
           "headersSize": "<filtered>",
-          "bodySize": "<filtered>",
-          "_transferSize": "<filtered>"
+          "bodySize": "<filtered>"
         },
         "cache": {},
         "timings": {
